public/styles/styles.css
:root {
    --bg-color: #1C1D23;
    --text-color-white: #FFFFFF;
    --subtext-color-light-grey: #868785;
    --heading-color-burgundyish: #D45A48;
    --primary-btn-color-blue: #2474A1;
    --hovered-btn-color-tropblu: #4BBDAC;
    --misc-color-turqblu: #336E6F;
}

body {
    background-color: var(--bg-color);
    color: var(--text-color-white);
}

.subtext {
    color: var(--subtext-color-light-grey);
}

h1,
h2,
h3,
h4,
h5,
h6 {
    color: var(--heading-color-burgundyish);
}

.btn-primary {
    background-color: var(--primary-btn-color-blue);
    color: var(--text-color);
}

.btn-primary:hover {
    background-color: var(--hovered-btn-color-tropblu);
}

.misc {
    color: var(--misc-color-turqblu);
}



/* //////////////////////////////
            Partials 
////////////////////////////// */
.navbar {
    border-bottom: 2px solid var(--misc-color-turqblu);
    background-color: #525252;
}

.nav-link:hover {
    color: #D45A48 ! important;
}

.offcanvas {
    border-bottom: 2px solid var(--misc-color-turqblu);
    background-color: #525252;
}

.offcanvas-header {
    border-bottom: 2px solid var(--misc-color-turqblu);
    background-color: #1C1D23;
}

/* User icon */
.navbar-icons {
    fill: var(--misc-color-turqblu);
    width: 60%;
    height: 60%;
}

#icon-bar {
    margin-top: 20%;
}

.icons {
    margin: 10%;
    fill: var(--misc-color-turqblu);
    width: 40%;
}

.button-padding {
    padding-left: 30px;
    padding-right: 30px;
    padding-top: 20px;
    padding-bottom: 20px;
}

.button-margin {
    margin: 20px;
}

.general-margin {
    margin-top: 20px;
}

.title-margin {
    margin-top: 5px
}

.saved-build-container {
    position: relative;
    display: inline-block;
    /* margin: 10px; */
}

.btn-custom {
    width: 500px;
    height: 80px;
}

.trash-can-container {
    position: absolute;
    bottom: 0;
    right: 0;
}

.bottom-right-image {
    width: 20px;
    height: 20px;
    margin-bottom: 3px;
}

/*when screen larger than 768px make icon-bar disappear */
@media screen and (min-width: 768px) {
    #icon-bar {
        display: none;
    }
}

